--- a/salvo/src/main/resources/static/web/games.html
+++ b/salvo/src/main/resources/static/web/games.html
@@ -3,13 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>Salvo!</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body>
+  <div class="container-fluid bg">
+    <div class="row">
+      <h2 class="display-5 font-weight-bold font-italic ml-4">Game List</h2>
+    </div>
+    <div class="row">
+      <ol id="gameList"></ol>
+    </div>
 
-  <ol id="gameList"></ol>
+    <div class="row">
+      <h2 class="display-5 font-weight-bold font-italic ml-4">Leaderboard</h2>
+    </div>
+    <div class="row">
+      <table class="mx-auto mt-4 table table-bordered table-sm table-responsive-lg id="leaderBoard"></table>
+    </div>
+
+
+
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="scripts/games.js"></script>
 </body>
 </html>
