Module 4 - Task 5 (finalizada)

--- a/salvo/src/main/resources/static/web/games.html
+++ b/salvo/src/main/resources/static/web/games.html
@@ -8,18 +8,18 @@
 
 <body>
   <div class="container-fluid bg">
-    <div class="row">
+    <div class="row mt-2">
       <h2 class="display-5 font-weight-bold font-italic ml-4">Game List</h2>
     </div>
     <div class="row">
       <ol id="gameList"></ol>
     </div>
 
-    <div class="row">
+    <div class="row mt-2">
       <h2 class="display-5 font-weight-bold font-italic ml-4">Leaderboard</h2>
     </div>
     <div class="row">
-      <table class="mx-auto mt-4 table table-bordered table-sm table-responsive-lg id="leaderBoard"></table>
+      <table class="mx-4 w-25 mt-2 table table-bordered table-sm table-responsive-sm" id="leaderBoard"></table>
     </div>
 
 
